--- a/src/main/resources/dotty_res/styles/scalastyle.css
+++ b/src/main/resources/dotty_res/styles/scalastyle.css
@@ -447,6 +447,38 @@ footer .pull-right {
   margin-left: auto;
 }
 
+.modifiers {
+  width: 12em;
+  display: table-cell;
+  text-align: right;
+  padding-right: 0.5em;
+}
+
+.documentableElement {
+  display: table;
+  width: 100%;
+  color: var(--symbol-fg);
+	white-space: normal;
+  position: relative;
+  margin: .5em 0;
+  padding: 5px 4px 5px 4px;
+  font-weight: 500;
+  font-size: 12px;
+  background: var(--code-bg);
+}
+
+.documentableAnchor {
+  position: absolute;
+}
+
+.documentableBrief {
+  font-size: 14px;
+}
+
+.documentableBrief>p{
+  margin: .5em 0 0 0;
+}
+
 /* Large Screens */
 @media(min-width: 1100px) {
   :root {
@@ -533,3 +565,4 @@ footer .pull-right {
     display: none;
   }
 }
+
