--- a/src/main/resources/dotty_res/styles/scalastyle.css
+++ b/src/main/resources/dotty_res/styles/scalastyle.css
@@ -460,7 +460,7 @@ footer .pull-right {
   color: var(--symbol-fg);
 	white-space: normal;
   position: relative;
-  margin: .5em 0;
+  margin: 0;
   padding: 5px 4px 5px 4px;
   font-weight: 500;
   font-size: 12px;
