--- a/src/main/resources/dotty_res/styles/filter-bar.css
+++ b/src/main/resources/dotty_res/styles/filter-bar.css
@@ -27,7 +27,7 @@
 
 .filterToggleButton svg {
   fill: var(--code-bg);
-  transition: fill 0.1s ease-in, transform 0.2s ease-in-out;
+  transition: fill 0.1s ease-in, transform 0.1s ease-in-out;
 }
 
 .filterToggleButton:hover svg,
@@ -51,6 +51,7 @@
 
 .filterGroup {
   display: flex;
+  margin-bottom: 16px;
 }
 
 .filterList {
@@ -69,16 +70,63 @@
   font-size: 12px;
   font-weight: 700;
   cursor: pointer;
+  border-bottom: 2px solid var(--inactive-fg);
+  transition: all 0.1s ease-in;
+}
+
+.filterButtonItem:hover,
+.filterButtonItem:focus {
+  opacity: 0.7;
 }
 
 .filterButtonItem.active {
+  color: var(--code-bg);
+  border-bottom-color: var(--link-fg);
   background-color: var(--active-tab-color);
 }
 
 .groupTitle {
-  min-width: 88px;
+  min-width: 98px;
   margin-top: 4px;
   font-weight: 700;
   font-size: 14px;
   color: var(--code-bg);
+}
+
+.groupButtonsContainer {
+  display: flex;
+  align-items: center;
+  margin-top: 4px;
+}
+
+.selectAll {
+  margin-right: 4px;
+}
+
+.selectAll,
+.deselectAll {
+  outline: 0;
+  border: 0;
+  background-color: transparent;
+  padding: 0;
+  color: var(--code-bg);
+  font-size: 8px;
+  cursor: pointer;
+  transition: all 0.1s ease-in;
+}
+
+.selectAll {
+  padding: 4px;
+  border-radius: 2px;
+  background-color: var(--active-tab-color);
+}
+
+.selectAll:hover,
+.selectAll:focus {
+  opacity: 0.7;
+}
+
+.deselectAll:hover,
+.deselectAll:focus {
+  color: var(--active-tab-color);
 }
