Add support for multiple-value params
Also hide groups that does not match query.

--- a/src/main/resources/dotty_res/styles/filter-bar.css
+++ b/src/main/resources/dotty_res/styles/filter-bar.css
@@ -59,6 +59,7 @@
 }
 
 .filterButtonItem {
+  display: none;
   padding: 6px 16px;
   margin-bottom: 6px;
   margin-right: 6px;
@@ -83,6 +84,10 @@
   color: var(--code-bg);
   border-bottom-color: var(--link-fg);
   background-color: var(--active-tab-color);
+}
+
+.filterButtonItem.visible {
+  display: inline-block;
 }
 
 .groupTitle {
